--- a/main.tex
+++ b/main.tex
@@ -13,13 +13,14 @@
 \makecvtitle
 
 \section{Summary}
-An undergrad student at PICT, I'm a Cybersecurity enthusiast specializing in networking and network security. I possess hands-on experience with leading cloud providers like AWS, Azure, GCP, Vultr, DigitalOcean, and Linode. My repertoire includes successful mini projects involving Raspberry Pi and ESP32. My drive lies in securing digital domains through strategic tech solutions.
+An undergrad student at PICT, I'm a Cybersecurity enthusiast specializing in networking and network security. I possess hands-on experience with leading cloud providers like AWS, Azure, GCP, Vultr, DigitalOcean, and Linode. My repertoire includes successful mini-projects involving Raspberry Pi and ESP32. My drive lies in securing digital domains through strategic tech solutions.
 
 \section{Experience}
+\cventry{Dec 2023-- Feb 2023}{Application Security Tester}{Cybage Software}{}{}{Internship - CyberSecurity}
 \cventry{Jul 2023--Present}{Technical Head}{PICT CyberCell}{}{}{}
 \cventry{Dec 2022--Present}{Cyber Security Core Team Member}{Developer Student Clubs PICT}{}{}{}
-\cventry{Mar 2022--May 2023}{Electrical Team}{Torqscrew | The PICT Automobile Club}{}{}{Handled BLDC motor, controller, and battery pack.}
-\cventry{Feb 2022--Mar 2022}{Student partner - ISP 27}{Internshala}{}{}{Part of Internshala Student Partner 27}
+\cventry{Mar 2022--May 2023}{Electrical Team}{Torqscrew | The PICT Automobile Club}{}{}{}
+\cventry{Feb 2022--Mar 2022}{Student partner - ISP 27}{Internshala}{}{}{}
 
 \section{Education}
 \cventry{Dec 2021--Jul 2025}{BE - Electronics and Telecommunication Engineering}{Pune Institute of Computer Technology}{}{}{}
@@ -30,9 +31,9 @@ An undergrad student at PICT, I'm a Cybersecurity enthusiast specializing in net
 \cvlistdoubleitem{Cybersecurity}{IT Operations}
 \cvlistdoubleitem{C/C++}{Python}
 \cvlistdoubleitem{DBMS}{Docker}
-\cvlistdoubleitem{Internet of Things (IoT)}{IT Automation - Ansible}
+\cvlistdoubleitem{Internet of Things (IoT)}{Cloud Computing}
 \cvlistdoubleitem{Network Security}{Computer Networking}
-\cvlistdoubleitem{Cloud Computing}{Digital Marketing}
+\cvlistdoubleitem{Digital Marketing}
 
 \section{Licenses \& Certifications}
 \cvlistitem{Cyber Security \& Ethical Hacking - Udgam}
