Update the summary

--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \makecvtitle
 
 \section{Summary}
-An undergrad student at PICT, I'm a Cybersecurity enthusiast specializing in networking and network security. I possess hands-on experience with leading cloud providers like AWS, Azure, GCP, Vultr, DigitalOcean, and Linode. My repertoire includes successful mini-projects involving Raspberry Pi and ESP32. My drive lies in securing digital domains through strategic tech solutions.
+As a cybersecurity enthusiast focusing on networking and network security, I am an undergraduate at PICT with a solid IT infrastructure foundation. My expertise is adeptly handling Linux systems, Windows Systems, networking devices, and IOT Devices, complemented by practical experience with leading cloud service providers. I am keen to apply my skills in cybersecurity and  networking aiming to contribute to and grow within a forward-thinking organization 
 
 \section{Experience}
 \cventry{Dec 2023-- Feb 2023}{Application Security Tester}{Cybage Software}{}{}{Internship - CyberSecurity}
@@ -30,7 +30,7 @@ An undergrad student at PICT, I'm a Cybersecurity enthusiast specializing in net
 \section{Skills}
 \cvlistdoubleitem{Cybersecurity}{IT Operations}
 \cvlistdoubleitem{C/C++}{Python}
-\cvlistdoubleitem{DBMS}{Docker}
+\cvlistdoubleitem{DBMS}{DevOps/DevSecOps}
 \cvlistdoubleitem{Internet of Things (IoT)}{Cloud Computing}
 \cvlistdoubleitem{Network Security}{Computer Networking}
 \cvlistdoubleitem{Digital Marketing}
