Added 3dprinter project and corrected formatting

--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@
 \textbf{Technical Leadership and Event Management}
 \begin{itemize}
     \item Led technical operations for events, including the deployment and management of websites and vulnerable VMs for Capture the Flag (CTF) competitions.
-    \item Managed network monitoring and security for major events, such as the CTF event conducted by IIT Bombay Trust Labs and HSBC.
+    \item Managed the network and monitored it for the CTF event conducted by IIT Bombay Trust Labs and HSBC.
     \item Conducted sessions and seminars on networking and cybersecurity tools, including Nmap and Wireshark.
 \end{itemize}
 \vspace{2.0mm}
@@ -110,20 +110,27 @@
     \item Created a PoE extractor for devices that do not support PoE, enabling them to be powered over the network.
 \end{itemize}
 \vspace{2.0mm}
+\textbf{Multiple 3D printer orchestration using Raspberry Pi}
+\begin{itemize}
+    \item Used a Raspberry Pi to remotely access multiple 3D printers and automate the 3D printing process by handling exceptions in the printing process.
+    \item Designed a gimbal to mount camera controlled by RPi for live feed.
+\end{itemize}
+\vspace{2.0mm}
+
 
 \end{minipage}
 \hfill
 % right column
 \begin{minipage}[t]{0.35\textwidth}
 \section{SUMMARY}
-As a passionate cybersecurity and networking enthusiast, I am an undergraduate engineering student at PICT specializing in Electronics and Telecommunications (EnTC). With hands-on experience in IT infrastructure, Linux and Windows systems, networking devices, and cloud platforms, I am dedicated to applying my cybersecurity skills to protect and optimize network systems. Currently seeking internships in cybersecurity, networking, DevOps, and cloud domains to leverage my knowledge and contribute to a forward-thinking organization.
+As a passionate cybersecurity and networking enthusiast, I am an undergraduate engineering student at PICT specializing in Electronics and Telecommunications (EnTC). With hands-on experience in IT infrastructure, Linux and Windows systems, networking devices, and cloud platforms, I am dedicated to applying my cybersecurity skills to protect and optimize network systems. Looking forward to work in cybersecurity, networking, DevOps, and cloud domains to leverage my knowledge and contribute to a forward-thinking organization.
 
 \section{SKILLS}
 \begin{tabularx}{\textwidth}{>{\bfseries}l@{\hskip 3.5mm}L}
 Cybersecurity & Network Security, Web App Security \\
 Programming Languages & Python, C++ \\
 DBMS & MySQL \\
-Computer Networking & Networking Gear\\
+Computer Networking & Networking Ansible\\
 DevOps & Docker \\
 Cloud Computing & AWS, GCP \\
 Other Skills & Digital Marketing \\
