Added Uniken Internship

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 % This is a two-column CV template based on moderncv.cls
 % (v1.0, May 16, 2024) written by Genki Ogaki (rockstarogk@gmail.com). Compiles with XeLaTeX.
 %
-%% It may be distributed and/or modified under the
+%% It may be distributed and modified under the
 %% conditions of the LaTeX Project Public License, either version 1.3
 %% of this license or (at your option) any later version.
 %% The latest version of this license is in
@@ -70,6 +70,18 @@
 % left column
 \begin{minipage}[t]{0.62\textwidth}
 \section{EXPERIENCE}
+\experienceentry{Uniken}{Android App Security Tester (Intern)}{Aug 2024 - Present}{Online}
+
+\textbf{Electrical System Design for Electric Go-Kart}
+\begin{itemize}
+    \item Got introduced to mobile application framework.
+    \item Learned how to decompile the mobile binaries.
+    \item Static and Dynamic Analysis of Android apps.
+    \item Identifying potential threats and vulnerabilities in applications.
+    \item Conducting security audits and penetration testing to ensure the safety of applications.
+\end{itemize}
+\vspace{2.0mm}
+
 \experienceentry{Cybage Software}{Application Security Tester (Intern)}{Dec 2023 - Feb 2024}{Kalyani Nagar, Pune, Maharashtra}
 
 \textbf{Application Security Testing}
@@ -82,7 +94,7 @@
 \end{itemize}
 \vspace{2.0mm}
 
-\experienceentry{PICT CyberCell}{Technical Head}{Jul 2023 - Present}{PICT}
+\experienceentry{PICT CyberCell}{Technical Head}{Jul 2023 - Sep 24}{PICT}
 
 \textbf{Technical Leadership and Event Management}
 \begin{itemize}
@@ -92,17 +104,14 @@
 \end{itemize}
 \vspace{2.0mm}
 
-\experienceentry{PICT Automobile Club - Torqscrew}{Electrical Head}{Mar 2022 - Mar 2023}{PICT}
+\section{PROJECTS}
 
-\textbf{Electrical System Design for Electric Go-Kart}
+\textbf{AI-powered Deep Packet Analyzer}
 \begin{itemize}
-    \item Designed and implemented electrical systems, including battery management, motor controller integration, and wiring harnesses.
-    \item Ensured the safety and reliability of the electrical components and systems.
-    \item Managed the integration of small electronic components like tail lights and safety switches.
+    \item Currently working on this project, we plan to analyze network packets with Machine learning 
+    \item Malicious packets will be filtered and/or notified to the network admin
 \end{itemize}
 \vspace{2.0mm}
-
-\section{PROJECTS}
 
 \textbf{IoT Powered Power Over Ethernet (PoE) Device}
 \begin{itemize}
@@ -110,12 +119,13 @@
     \item Created a PoE extractor for devices that do not support PoE, enabling them to be powered over the network.
 \end{itemize}
 \vspace{2.0mm}
+
 \textbf{Multiple 3D printer orchestration using Raspberry Pi}
 \begin{itemize}
-    \item Used a Raspberry Pi to remotely access multiple 3D printers and automate the 3D printing process by handling exceptions in the printing process.
-    \item Designed a gimbal to mount camera controlled by RPi for live feed.
+    \item Robust IoT system designed to fully automate and monitor 3D printers.
 \end{itemize}
 \vspace{2.0mm}
+
 
 
 \end{minipage}
@@ -134,7 +144,7 @@ Computer Networking & Networking Ansible\\
 DevOps & Docker \\
 Cloud Computing & AWS, GCP \\
 Other Skills & Digital Marketing \\
-Languages & English, Hindi, Marathi \\
+Languages & English (IELTS - 7.5), Hindi, Marathi \\
 \end{tabularx}
 
 \section{EDUCATION}
