--- a/resume.tex
+++ b/resume.tex
@@ -94,49 +94,49 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \textit{Intern - Mobile Application Security Tester} \hfill Aug 2024 - Nov 2024\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Identifying potential threats and vulnerabilities in applications
-	\item Static and Dynamic analysis
-	\item Implementing robust security measures
-	\item Conduct security audits and penetration testing to ensure the safety of applications
-	\item Followed OWASP Top 10
+	\item Conducted static \& dynamic analysis of Android applications using industry-standard tools.
+	\item Evaluated application vulnerabilities and reported security flaws with remediation steps.
+	\item Applied OWASP Mobile Top 10 techniques to assess security vulnerabilities in Android applications.
 \end{itemize}
 \textbf{Cybage Software} \hfill Pune, Maharashtra, India\\
-\textit{Intern - Web Application Security Tester} \hfill Dec 2023 - Feb 2024\\
+\textit{Intern - Cybersecurity} \hfill Dec 2023 - Feb 2024\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item SAST (Static Application Security Testing)
-	\item SCA (Software Composition Analysis)
-	\item DAST (Dynamic Application Security Testing)/Pen Testing
-	\item Preparation of reports
-	\item Followed OWASP Top 10 and OWASP WSTG
+	\item Automated SAST \& SCA integration into CI/CD pipelines, optimizing security workflows and enhancing DevSecOps practices
+	\item Performed manual DAST and API penetration testing following OWASP standards.
+	\item Compiled security testing reports and recommended fixes to improve web application security.
 \end{itemize}
 \textbf{PICT CyberCell} \hfill PICT, Pune\\
 \textit{Technical Head} \hfill July 2023 - Aug 2024\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Conducted workshops for Computer Networks and Network Security
-	\item Created and Managed club events including CTF, Workshops, SIG etc
-	\item Implemented network access solution for IITB+HSBC organized CTF event
+	\item Conducted workshops on advanced topics such as DevSecOps, Computer Networking and Network Security
+	\item Deployed and automated cloud infrastructure for CTF events and workshops, ensuring seamless operations.
+	\item Engineered scalable, secure network access solutions for IITB+HSBC CTF events, ensuring high availability and security.
 \end{itemize}
 
 \header{Skills}
 \begin{tabular}{ l l }
-	Programming Languages: & Python, Javascript, OOPS, Bash, Ansible                                         \\
-	CyberSecurity:         & OWASP top 10, Web and Android App Security, DevSecOps, Secure Cloud Deployments \\
-	Others:                & DBMS(SQL), Operating Systems, DevOps, Docker, CI/CD, Git                        \\
-	Cloud Platforms:       & GCP, AWS, Azure, DigitalOcean, Hetzener                                         \\
+	Programming and Scripting: & Python, JavaScript, C/C++, Bash                             \\
+	Essentials:                & DBMS(MySQL), OS, Networking, DevOps, CI/CD, Cloud Computing \\
+	Tools and Services:        & Ansible, Docker, Git, Zabbix, Grafana, Kubernetes           \\
+	Cloud:                     & AWS, Azure, DigitalOcean, Proxmox                           \\
+	Cybersecurity:             & OWASP, MITRE ATT\&CK, Bug Hunting, Incident Response        \\
 \end{tabular}
 \vspace{2mm}
 
 \header{Projects}
 {\textbf{Home Lab}} {\sl Routers, Layer 3 switches, wireless access points, Proxmox node, Ansible, Zabbix} \\
-Built and managed a home lab with virtual machines and containers for hands-on experimentation in networking, cybersecurity, and system optimization. The setup provided a robust platform for enhancing technical expertise and efficient configuration management.\\
+Built and manage a home lab with virtual machines and containers for hands-on DevOps and DevSecOps experimentation. Automated infrastructure management using Ansible, and monitoring system performance using Grafana, InfluxDB and RestAPI.\\
+\vspace*{2mm}
+{\textbf{AI Powered Deep Packet Analyzer}} {\sl Python, AI/ML, Scapy, Wireshark, L3 Managed Switch} \\
+Currently working on an AI-driven network security model for real-time packet inspection and anomaly detection using Python, Scapy, and Wireshark. The project aims to classify network packets based on signatures, protocols, and traffic patterns to detect security threats proactively. A research paper on the findings is in progress and set to be published in Springer LNNS, focusing on the effectiveness of AI in enhancing cybersecurity defenses.\\
 \vspace*{2mm}
 {\textbf{IoT Powered Power Over Ethernet Injector and Extractor}} {\sl ESP32, ACS712, Azure, Grafana, InfluxDB} \\
-Developed an IoT-enabled Power over Ethernet (PoE) system with real-time power monitoring, custom PCBs for power injection and extraction, and a cloud-based dashboard for data visualization. Ensured reliability through rigorous testing and optimized performance for seamless power and data transmission.\\
+Developed an IoT-enabled Power over Ethernet (PoE) system with real-time power monitoring and a cloud-based dashboard for data visualization. Integrated seamlessly with existing network infrastructure, enabling real-time monitoring.\\
 \vspace*{2mm}
-{\textbf{Multiple 3D printer orchestration}} {\sl RaspberryPI, AWS (For VPN Tunnel), Servo Motors, Ender3 3D printers} \\
-Developed a system for managing multiple 3D printers with centralized control through a secure web interface. Enabled remote access via a cloud-hosted VPN and designed a servo-powered gimbal for a single camera to monitor all printers. Streamlined operations with efficient and secure remote management.\\
+{\textbf{Multiple 3D Printer Orchestration}} {\sl RaspberryPI, AWS (For VPN Tunnel), Servo Motors, Ender3 3D printers} \\
+Developed a system for managing multiple 3D printers with centralized control and secure remote access. Automated monitoring and job scheduling, optimizing efficiency and reducing manual intervention.\\
 \vspace*{2mm}
 
 
