--- a/resume.tex
+++ b/resume.tex
@@ -117,11 +117,11 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 
 \header{Skills}
 \begin{tabular}{ l l }
-	Programming and Scripting: & Python, JavaScript, C/C++, Bash                             \\
-	Essentials:                & DBMS(MySQL), OS, Networking, DevOps, CI/CD, Cloud Computing \\
-	Tools and Services:        & Ansible, Docker, Git, Zabbix, Grafana, Kubernetes           \\
-	Cloud:                     & AWS, Azure, DigitalOcean, Proxmox                           \\
-	Cybersecurity:             & OWASP, MITRE ATT\&CK, Bug Hunting, Incident Response        \\
+	Programming and Scripting: & Python, JavaScript, C/C++, Bash                                     \\
+	Essentials:                & DBMS(MySQL), OS, Networking, DevOps, CI/CD, Cloud Computing         \\
+	Tools and Services:        & Ansible, Docker, Git, Zabbix, Grafana, Kubernetes                   \\
+	Cloud:                     & AWS, Azure, DigitalOcean, Proxmox                                   \\
+	Cybersecurity:             & OWASP, MITRE ATT\&CK, Bug Hunting, Incident Response, Wazuh, SPLUNK \\
 \end{tabular}
 \vspace{2mm}
 
