Ensured page formatting

--- a/resume.tex
+++ b/resume.tex
@@ -130,7 +130,7 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 Built and manage a home lab with virtual machines and containers for hands-on DevOps and DevSecOps experimentation. Automated infrastructure management using Ansible, and monitoring system performance using Grafana, InfluxDB and RestAPI.\\
 \vspace*{2mm}
 {\textbf{AI Powered Deep Packet Analyzer}} {\sl Python, AI/ML, Scapy, Wireshark, L3 Managed Switch} \\
-Currently working on an AI-driven network security model for real-time packet inspection and anomaly detection using Python, Scapy, and Wireshark. The project aims to classify network packets based on signatures, protocols, and traffic patterns to detect security threats proactively. A research paper on the findings is in progress and set to be published in Springer LNNS, focusing on the effectiveness of AI in enhancing cybersecurity defenses.\\
+Developing an AI-driven network security model for real-time packet inspection and anomaly detection using Python, Scapy, and Wireshark. The system classifies packets by signatures, protocols, and traffic patterns to detect threats proactively. A related research paper, highlighting AI’s role in cybersecurity, is set for publication in Springer LNNS.\\
 \vspace*{2mm}
 {\textbf{IoT Powered Power Over Ethernet Injector and Extractor}} {\sl ESP32, ACS712, Azure, Grafana, InfluxDB} \\
 Developed an IoT-enabled Power over Ethernet (PoE) system with real-time power monitoring and a cloud-based dashboard for data visualization. Integrated seamlessly with existing network infrastructure, enabling real-time monitoring.\\
