Added Bug bounty Experience

--- a/resume.tex
+++ b/resume.tex
@@ -126,17 +126,17 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \vspace{2mm}
 
 \header{Projects}
-{\textbf{Home Lab}} {\sl Routers, Layer 3 switches, wireless access points, Proxmox node, Ansible, Zabbix} \\
-Built and manage a home lab with virtual machines and containers for hands-on DevOps and DevSecOps experimentation. Automated infrastructure management using Ansible, and monitoring system performance using Grafana, InfluxDB and RestAPI.\\
+{\textbf{Home Lab}} {\sl Routers, Layer 3 switches, wireless access points, Proxmox node, Ansible, Zabbix, RaspberryPI} \\
+For over five years, I have been building and managing a home lab with virtual machines and containers for hands-on DevOps and DevSecOps experimentation. I automate infrastructure management using Ansible and continuously monitor system performance with Grafana, InfluxDB, and REST API.\\
 \vspace*{2mm}
 {\textbf{AI Powered Deep Packet Analyzer}} {\sl Python, AI/ML, Scapy, Wireshark, L3 Managed Switch} \\
 Developing an AI-driven network security model for real-time packet inspection and anomaly detection using Python, Scapy, and Wireshark. The system classifies packets by signatures, protocols, and traffic patterns to detect threats proactively. A related research paper, highlighting AI’s role in cybersecurity, is set for publication in Springer LNNS.\\
 \vspace*{2mm}
-{\textbf{IoT Powered Power Over Ethernet Injector and Extractor}} {\sl ESP32, ACS712, Azure, Grafana, InfluxDB} \\
+{\textbf{IoT Based Power Over Ethernet Device}} {\sl ESP32, ACS712, Azure, Grafana, InfluxDB, RaspberryPI} \\
 Developed an IoT-enabled Power over Ethernet (PoE) system with real-time power monitoring and a cloud-based dashboard for data visualization. Integrated seamlessly with existing network infrastructure, enabling real-time monitoring.\\
 \vspace*{2mm}
-{\textbf{Multiple 3D Printer Orchestration}} {\sl RaspberryPI, AWS (For VPN Tunnel), Servo Motors, Ender3 3D printers} \\
-Developed a system for managing multiple 3D printers with centralized control and secure remote access. Automated monitoring and job scheduling, optimizing efficiency and reducing manual intervention.\\
+{\textbf{Freelance Bug Hunting}} {\sl NMAP, BurpSuite, Postman, SQLi, XSS, Cloud Security, Network Security} \\
+For over two years, I have been identifying and reporting security vulnerabilities in web, mobile, and cloud deployments through responsible disclosure programs. I provide remediation steps, detailed PoCs, and clear reproduction steps to help organizations strengthen their security.\\
 \vspace*{2mm}
 
 
