--- a/resume.tex
+++ b/resume.tex
@@ -119,14 +119,14 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \begin{tabular}{ l l }
 	Programming and Scripting: & Python, JavaScript, C/C++, Bash                                     \\
 	Essentials:                & DBMS(MySQL), OS, Networking, DevOps, CI/CD, Cloud Computing         \\
-	Tools and Services:        & Ansible, Docker, Git, Zabbix, Grafana, Kubernetes                   \\
+	Tools and Services:        & Ansible, Docker, Git, Grafana, Kubernetes                           \\
 	Cloud:                     & AWS, Azure, DigitalOcean, Proxmox                                   \\
 	Cybersecurity:             & OWASP, MITRE ATT\&CK, Bug Hunting, Incident Response, Wazuh, SPLUNK \\
 \end{tabular}
 \vspace{2mm}
 
 \header{Projects}
-{\textbf{Home Lab}} {\sl Routers, Layer 3 switches, wireless access points, Proxmox node, Ansible, Zabbix, RaspberryPI} \\
+{\textbf{Home Lab}} {\sl Routers, Layer 3 switches, wireless access points, Proxmox, Ansible, RaspberryPI} \\
 For over five years, I have been building and managing a home lab with virtual machines and containers for hands-on DevOps and DevSecOps experimentation. I automate infrastructure management using Ansible and continuously monitor system performance with Grafana, InfluxDB, and REST API.\\
 \vspace*{2mm}
 {\textbf{AI Powered Deep Packet Analyzer}} {\sl Python, AI/ML, Scapy, Wireshark, L3 Managed Switch} \\
@@ -135,7 +135,7 @@ Developing an AI-driven network security model for real-time packet inspection a
 {\textbf{IoT Based Power Over Ethernet Device}} {\sl ESP32, ACS712, Azure, Grafana, InfluxDB, RaspberryPI} \\
 Developed an IoT-enabled Power over Ethernet (PoE) system with real-time power monitoring and a cloud-based dashboard for data visualization. Integrated seamlessly with existing network infrastructure, enabling real-time monitoring.\\
 \vspace*{2mm}
-{\textbf{Freelance Bug Hunting}} {\sl NMAP, BurpSuite, Postman, SQLi, XSS, Cloud Security, Network Security} \\
+{\textbf{Freelance Bug Hunting}} {\sl Nmap, BurpSuite, Postman, SQLi, XSS, Cloud Security, Network Security, OWASP} \\
 For over two years, I have been identifying and reporting security vulnerabilities in web, mobile, and cloud deployments through responsible disclosure programs. I provide remediation steps, detailed PoCs, and clear reproduction steps to help organizations strengthen their security.\\
 \vspace*{2mm}
 
