Added EY workex

--- a/resume.tex
+++ b/resume.tex
@@ -90,6 +90,15 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \header{Work Experience}
 \vspace{1mm}
 
+\textbf{Ernst \& Young (EY)} \hfill Pune, Maharashtra, India\\
+\textit{Summer Intern - Cybersecurity} \hfill Mar 2025 - Jun 2025\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Performed penetration testing on 5G (Telecom) infrastructure
+	\item Performed Secure Code Review (Manual SAST) and manual DAST for Web and Mobile apps
+	\item Reviewed Network architectures and Cloud Deployments from a security standpoint
+	\item Setup and maintained a test 5G core deployment on Kubernetes
+\end{itemize}
 \textbf{Uniken INC} \hfill Pune, Maharashtra, India\\
 \textit{Intern - Mobile Application Security Tester} \hfill Aug 2024 - Nov 2024\\
 \vspace{-1mm}
@@ -99,20 +108,12 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 	\item Applied OWASP Mobile Top 10 techniques to assess security vulnerabilities in Android applications.
 \end{itemize}
 \textbf{Cybage Software} \hfill Pune, Maharashtra, India\\
-\textit{Intern - Cybersecurity} \hfill Dec 2023 - Feb 2024\\
+\textit{Cybersecurity Intern} \hfill Dec 2023 - Feb 2024\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Automated SAST \& SCA integration into CI/CD pipelines, optimizing security workflows and enhancing DevSecOps practices
 	\item Performed manual DAST and API penetration testing following OWASP standards.
 	\item Compiled security testing reports and recommended fixes to improve web application security.
-\end{itemize}
-\textbf{PICT CyberCell} \hfill PICT, Pune\\
-\textit{Technical Head} \hfill July 2023 - Aug 2024\\
-\vspace{-1mm}
-\begin{itemize} \itemsep 1pt
-	\item Conducted workshops on advanced topics such as DevSecOps, Computer Networking and Network Security
-	\item Deployed and automated cloud infrastructure for CTF events and workshops, ensuring seamless operations.
-	\item Engineered scalable, secure network access solutions for IITB+HSBC CTF events, ensuring high availability and security.
 \end{itemize}
 
 \header{Skills}
