Added Network Pen Test

--- a/resume.tex
+++ b/resume.tex
@@ -96,6 +96,7 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \begin{itemize} \itemsep 1pt
 	\item Performed penetration testing on 5G (Telecom) infrastructure
 	\item Performed Secure Code Review (Manual SAST) and manual DAST for Web and Mobile apps
+	\item Performed Red Teaming Operation (PenTesting) on IT (Networks and Domain)
 	\item Reviewed Network architectures and Cloud Deployments from a security standpoint
 	\item Setup and maintained a test 5G core deployment on Kubernetes
 \end{itemize}
@@ -137,7 +138,7 @@ Developing an AI-driven network security model for real-time packet inspection a
 Developed an IoT-enabled Power over Ethernet (PoE) system with real-time power monitoring and a cloud-based dashboard for data visualization. Integrated seamlessly with existing network infrastructure, enabling real-time monitoring.\\
 \vspace*{2mm}
 {\textbf{Freelance Bug Hunting}} {\sl Nmap, BurpSuite, Postman, SQLi, XSS, Cloud Security, Network Security, OWASP} \\
-For over two years, I have been identifying and reporting security vulnerabilities in web, mobile, and cloud deployments through responsible disclosure programs. I provide remediation steps, detailed PoCs, and clear reproduction steps to help organizations strengthen their security.\\
+For over two years, I have been identifying and reporting security vulnerabilities in web, mobile, network configuration and cloud deployments through responsible disclosure programs. I provide remediation steps, detailed PoCs, and clear reproduction steps to help organizations strengthen their security.\\
 \vspace*{2mm}
 
 
