--- a/resume.tex
+++ b/resume.tex
@@ -129,7 +129,7 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 
 \header{Projects}
 {\textbf{Home Lab}} {\sl Routers, Layer 3 switches, wireless access points, Proxmox, Ansible, RaspberryPI} \\
-For over five years, I have been building and managing a home lab with virtual machines and containers for hands-on DevOps and DevSecOps experimentation. I automate infrastructure management using Ansible and continuously monitor system performance with Grafana, InfluxDB, and REST API.\\
+For over five years, I have been building and managing a home lab with Mikrotik Routers, Layer 3 switches, Access Points, virtual machines and containers for hands-on Networking, Security Testing, DevOps and DevSecOps experimentation. I automate infrastructure management using Ansible and continuously monitor system performance with monitoring tools.\\
 \vspace*{2mm}
 {\textbf{AI Powered Deep Packet Analyzer}} {\sl Python, AI/ML, Scapy, Wireshark, L3 Managed Switch} \\
 Developing an AI-driven network security model for real-time packet inspection and anomaly detection using Python, Scapy, and Wireshark. The system classifies packets by signatures, protocols, and traffic patterns to detect threats proactively. A related research paper, highlighting AI’s role in cybersecurity, is set for publication in Springer LNNS.\\
