added 5g testing tools

--- a/resume.tex
+++ b/resume.tex
@@ -80,7 +80,7 @@
 %==== Education ====%
 \header{Education}
 \textbf{Pune Institute of Computer Technology (SPPU)}\hfill Pune, Maharashtra, India\\
-BE Electronics and Telecommunications \textit{GPA: 8.76} \hfill Dec 2021 - July 2025 (Expected)\\
+BE Electronics and Telecommunications \textit{GPA: 8.55} \hfill Dec 2021 - July 2025 (Expected)\\
 \vspace{2mm}
 \textbf{SP College Pune}\hfill Pune, Maharashtra, India\\
 High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
@@ -94,11 +94,11 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \textit{Summer Intern - Cybersecurity} \hfill Mar 2025 - Jun 2025\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Performed penetration testing on 5G (Telecom) infrastructure
+	\item Performed penetration testing on 5G (Telecom) infrastructure and developed tools for protocol testing
 	\item Performed Secure Code Review (Manual SAST) and manual DAST for Web and Mobile apps
 	\item Performed Red Teaming Operation (PenTesting) on IT (Networks and Domain)
 	\item Reviewed Network architectures and Cloud Deployments from a security standpoint
-	\item Setup and maintained a test 5G core deployment on Kubernetes
+	\item Setup and maintained a test 5G core deployment on Kubernetes for testing purpose
 \end{itemize}
 \textbf{Uniken INC} \hfill Pune, Maharashtra, India\\
 \textit{Intern - Mobile Application Security Tester} \hfill Aug 2024 - Nov 2024\\
