Added ribbon experience

--- a/resume.tex
+++ b/resume.tex
@@ -80,7 +80,7 @@
 %==== Education ====%
 \header{Education}
 \textbf{Pune Institute of Computer Technology (SPPU)}\hfill Pune, Maharashtra, India\\
-BE Electronics and Telecommunications \textit{GPA: 8.55} \hfill Dec 2021 - July 2025 (Expected)\\
+BE Electronics and Telecommunications \textit{GPA: 8.75} \hfill Dec 2021 - July 2025\\
 \vspace{2mm}
 \textbf{SP College Pune}\hfill Pune, Maharashtra, India\\
 High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
@@ -90,6 +90,18 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \header{Work Experience}
 \vspace{1mm}
 
+\textbf{Ribbon Communications} \hfill Navi Mumbai (Hybrid)\\
+\textit{Verification Engineer} \hfill June 2025 - Present\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Executed automated test suites on Neptune routers and analyzed resulting logs to verify protocol stability and operational correctness.
+	\item Performed operational verification post-test to confirm service continuity and validate protocol behavior under real workloads.
+	\item Conducted penetration tests on router firmware and network interfaces to identify exploitable vulnerabilities and attack vectors.
+	\item Investigated and triaged security-related log anomalies, correlating events to reproduce issues and assess impact.
+	\item Verified remediation effectiveness by re-running automation and validating fixes across the Neptune product line.
+	\item Documented findings, attack scenarios, and mitigation steps in clear reports to support product enhancement
+	\item Collaborated with firmware and OS development teams to remediate vulnerabilities and resolve protocol instabilities.
+\end{itemize}
 \textbf{Ernst \& Young (EY)} \hfill Pune, Maharashtra, India\\
 \textit{Summer Intern - Cybersecurity} \hfill Mar 2025 - Jun 2025\\
 \vspace{-1mm}
@@ -120,7 +132,7 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 \header{Skills}
 \begin{tabular}{ l l }
 	Programming and Scripting: & Python, JavaScript, C/C++, Bash                                     \\
-	Essentials:                & DBMS(MySQL), OS, Networking, DevOps, CI/CD, Cloud Computing         \\
+	Essentials:                & Linux, Advanced Networking, DevOps, CI/CD                           \\
 	Tools and Services:        & Ansible, Docker, Git, Grafana, Kubernetes                           \\
 	Cloud:                     & AWS, Azure, DigitalOcean, Proxmox                                   \\
 	Cybersecurity:             & OWASP, MITRE ATT\&CK, Bug Hunting, Incident Response, Wazuh, SPLUNK \\
@@ -129,7 +141,7 @@ High School (HSC) PCM \textit{GPA: 82.83\%} \hfill June 2019 - May 2021\\
 
 \header{Projects}
 {\textbf{Home Lab}} {\sl Routers, Layer 3 switches, wireless access points, Proxmox, Ansible, RaspberryPI} \\
-For over five years, I have been building and managing a home lab with Mikrotik Routers, Layer 3 switches, Access Points, virtual machines and containers for hands-on Networking, Security Testing, DevOps and DevSecOps experimentation. I automate infrastructure management using Ansible and continuously monitor system performance with monitoring tools.\\
+For over six years, I have been building and managing a home lab with Mikrotik Routers, Layer 3 switches, Access Points, virtual machines and containers for hands-on Networking, Security Testing, DevOps and DevSecOps experimentation. I automate infrastructure management using Ansible and continuously monitor system performance with monitoring tools.\\
 \vspace*{2mm}
 {\textbf{AI Powered Deep Packet Analyzer}} {\sl Python, AI/ML, Scapy, Wireshark, L3 Managed Switch} \\
 Developing an AI-driven network security model for real-time packet inspection and anomaly detection using Python, Scapy, and Wireshark. The system classifies packets by signatures, protocols, and traffic patterns to detect threats proactively. A related research paper, highlighting AI’s role in cybersecurity, is set for publication in Springer LNNS.\\
